compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: Int
---
error: Unknown variable
  ┌─ /src/one/two.gleam:1:1
  │
1 │ Int
  │ ^^^ Did you mean `Nil`?

`Int` is a type, it cannot be used as a value.
