compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unnecessary_spread_operator.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(a, b, c, ..) = triple\n}"
---
----- SOURCE CODE

type Triple {
  Triple(a: Int, b: Int, c: Int)
}

fn main() {
  let triple = Triple(1,2,3)
  let Triple(a, b, c, ..) = triple
}

----- ERROR
error: Record update without changes
  ┌─ /src/one/two.gleam:8:23
  │
8 │   let Triple(a, b, c, ..) = triple
  │                       ^^

This record has 3 fields and you have already assigned variables to all of
them.
