compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__update_multi_variant_record.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1987
expression: "\npub type Point {\n  Point2(a: Int, b: Int)\n  Point3(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  Point3(..Point2(a: 1, b: 2))\n}"
---
error: Incorrect record update
  ┌─ /src/one/two.gleam:8:3
  │
8 │   Point3(..Point2(a: 1, b: 2))
  │   ^^^^^^ This is not the right constructor

This record is a different variant to the one used for the update, so it
would never be correct.
